deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: formulation-workbench
  labels:
    # Enforce Kubernetes Pod Security Standards at the `restricted` level.
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
