deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: formulation-workbench
  namespace: formulation-workbench
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: formulation-workbench
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
